--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <title>Reflux HTML CSS Template</title>
+    <title>Eiran Keating</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -40,8 +40,8 @@ https://templatemo.com/tm-531-reflux
               <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>Reflux Me</h4>
-              <span>Web Designer</span>
+              <h4>Eiran Keating</h4>
+              <span>Game Designer</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
@@ -65,10 +65,10 @@ https://templatemo.com/tm-531-reflux
                   <a href="#"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-dribbble"></i></a>
+                  <a href="#"><i class="fa fa-youtube-play"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa fa-rss"></i></a>
+                  <a href="#"><i class="fa fa-github-square"></i></a>
                 </li>
               </ul>
             </div>
@@ -85,8 +85,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              >This is a Bootstrap v4.2.1 CSS Template for you. Edit and use
-              this layout for your site. Updated on 21 May 2019 for repeated main menu HTML code.</span
+              >Game dev and writer studying at the University of Staffordshire. Check out my Rookies page for my portfolio, and don't hesitate to get in touch!</span
             >
           </div>
           <div class="left-image-post">
@@ -98,7 +97,7 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Reflux HTML CSS Template</h4>
+                  <h4>Rotator</h4>
                   <p>
                     Donec tristique feugiat lacus, at sollicitudin nunc euismod
                     sed. Mauris viverra, erat non sagittis gravida, elit dui
@@ -107,7 +106,7 @@ https://templatemo.com/tm-531-reflux
                     libero.
                   </p>
                   <div class="white-button">
-                    <a href="#">Read More</a>
+                    <a href="#">Play Now</a>
                   </div>
                 </div>
               </div>
@@ -126,7 +125,7 @@ https://templatemo.com/tm-531-reflux
                     semper.
                   </p>
                   <div class="white-button">
-                    <a href="#">Read More</a>
+                    <a href="#">Play Now</a>
                   </div>
                 </div>
               </div>
@@ -155,7 +154,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                <h4>HTML5 &amp; CSS3</h4>
+                <h4>Creative Mind</h4>
                 <p>
                   Phasellus non convallis dolor. Integer tempor hendrerit arcu
                   at bibendum. Sed ac ante non metus vehicula congue quis eget
@@ -166,7 +165,7 @@ https://templatemo.com/tm-531-reflux
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
-                <h4>Creative Ideas</h4>
+                <h4>Programming Skills</h4>
                 <p>
                   Proin lacus massa, eleifend sed fermentum in, dignissim vel
                   metus. Nunc accumsan leo nec felis porttitor, ultricies
